MySQL insert generation